# rusty-santa

./: .gitignore  Cargo.toml  README.md  RELEASING.md
examples/: cli.rs
rusty-santa/: Cargo.toml
rusty-santa-cli/: Cargo.toml
rusty-santa-cli/src/: main.rs
rusty-santa/src/: lib.rs
src/: lib.rs  main.rs
