[package]
name = "rusty-santa"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/rusty-santa"
repository = "https://github.com/dbrgn/rusty-santa"
license = "MIT OR Apache-2.0"
description = "Resolve Secret Santa assignments with additional constraints."
keywords = ["secret-santa", "bipartite-graphs", "random", "gifts", "wichteln"]

[dependencies]
rand = "0.3"
log = "0.3"

[dev-dependencies]
env_logger = "0.4"
